tasks re cancheros, falta parte de la funcionalidad

--- a/web/elektron/views/components.html
+++ b/web/elektron/views/components.html
@@ -70,8 +70,8 @@
 						</div>
 					  </td>
 					</tr>
-        </table><!--
-				  <button class="btn btn-default" ng-click="addComponent()">Agregar componente</button> -->
+        </table>
+				  <button class="btn btn-default" ng-click="addComponent()">Agregar componente</button>
 			</panel>
 		</div>
 	</div>
