--- a/web/elektron/views/login.html
+++ b/web/elektron/views/login.html
@@ -17,19 +17,14 @@
 					</div>
 				</div>
 				<div class="clearfix">
-					<div class="pull-right"><label><input type="checkbox" checked> Recordarme</label></div>
 				</div>
 				<a href="/#/index" class="btn btn-primary btn-block" ng-click="login()" data-pulsate="{reach:10, pause: 2000}">Ingresar</a>
 			</form>
 		</div>
 		<div class="panel-footer">
-			<a href="#/" class="pull-left btn btn-link" style="padding-left:0">¿Olvidaste la contraseña?</a>
 
       <div class="pull-right" >
-				<a href="#/extras-signupform" class="btn btn-default">Crear cuenta</a>
-			</div>
-			<div class="pull-right" style="margin-right: 5px;">
-				<a href="#" class="btn btn-default">Recuperar</a>
+				<a href="#/signupform" class="btn btn-default">Crear cuenta</a>
 			</div>
 		</div>
 	</div>
