--- a/ionic-mobile/elektron/www/templates/configuration.html
+++ b/ionic-mobile/elektron/www/templates/configuration.html
@@ -12,6 +12,12 @@
                </div>
              </label>
           </li>
+          <li class="item item-input">
+              <span class="input-label">Costo electricidad</span>
+              <label class="costo-input-label item-input-wrapper">$
+                <input class="costo-input" type="number" placeholder="Costo">
+              </label>
+          </li>
           <li class="list list-inset">
             <label class="item item-input">
               <i class="icon ion-search placeholder-icon"></i>
