--- a/ionic-mobile/elektron/www/templates/components.html
+++ b/ionic-mobile/elektron/www/templates/components.html
@@ -14,8 +14,10 @@
       </div>
       <div class="list">
           <div class="item item-button-right" ng-repeat="component in components_server">
-            <span>{{component.label}}</span>
-            <span class="badge badge-calm">{{data}}</span>
+            <span>{{component.label}}
+              <span ng-if="component.devicestate.name == 'on'" class="badge-component badge badge-balanced">encendido</span>
+              <span ng-if="component.devicestate.name == 'off'" class="badge-component badge badge-assertive">apagado</span>
+            </span>
             <a ui-sref="app.component({ componentId: {{component.id}} })" class="button button-positive">
               <i class="icon ion-compose"></i>
             </a>
