--- a/web/elektron/views/login.html
+++ b/web/elektron/views/login.html
@@ -18,7 +18,8 @@
 				</div>
 				<div class="clearfix">
 				</div>
-				<a href="/#/index" class="btn btn-primary btn-block" ng-click="login()" data-pulsate="{reach:10, pause: 2000}">Ingresar</a>
+				<a class="btn btn-primary btn-block" ng-click="formSubmit()" data-pulsate="{reach:10, pause: 2000}">Ingresar</a>
+        <span class="text-danger">{{ error }}</span>
 			</form>
 		</div>
 		<div class="panel-footer">
