--- a/web/elektron/views/components.html
+++ b/web/elektron/views/components.html
@@ -23,8 +23,8 @@
 						<td style="width:20%">Nombre</td>
 						<td style="width:20%">IP</td>
             <td style="width:20%">Mac</td>
-						<td style="width:20%">Estado</td>
-						<td style="width:20%">Modificar</td>
+						<td style="width:20%">Encendido/apagado</td>
+						<td style="width:20%">Modificar/estado</td>
 					</tr>
 					<tr ng-repeat="component in components_server">
 					  <td>
@@ -48,7 +48,10 @@
 					  <td>
 						<!-- editable group (select-remote) -->
 						<span e-name="last" e-form="rowform" e-required>
-						  {{ component.enabled }}
+              <div style="margin-left:3px;" ng-switch on="component.devicestate.name">
+                  <button ng-switch-when="on" class="btn btn-sm btn-danger" ng-click="turnOffComponent($index,component.id)">Apagar</button>
+                  <button ng-switch-when="off" class="btn btn-sm btn-success" ng-click="turnOnComponent($index,component.id)">Prender</button>
+              </div>
 						</span>
 					  </td>
 					  <td style="white-space: nowrap">
@@ -64,8 +67,8 @@
 						<div class="buttons" style="display:flex;" ng-show="!rowform.$visible">
 						  <button class="btn btn-sm btn-primary" ng-click="rowform.$show()">Editar</button>
               <div style="margin-left:3px;" ng-switch on="component.enabled">
-                  <button ng-switch-when="true" class="btn btn-sm btn-danger" ng-click="desactivateComponent($index)">Desactivar</button>
-                  <button ng-switch-when="false" class="btn btn-sm btn-success" ng-click="activateComponent($index)">Activar</button>
+                  <button ng-switch-when="true" class="btn btn-sm btn-danger" ng-click="disableComponent($index,component.id)">Desactivar</button>
+                  <button ng-switch-when="false" class="btn btn-sm btn-success" ng-click="enableComponent($index,component.id)">Activar</button>
               </div>
 						</div>
 					  </td>
